added name search feature
