# routes/countries.js
@@ -9,6 +9,8 @@ const countriesController = require("../controllers/countries");
 
 router.get("/", countriesController.getAll);
 
+router.get("/name/:name", countriesController.getContry);
+
 router.get("/:id", countriesController.getOne);
 
 router.post("/", isAuthenticated, validation.validateCountry, countriesController.createCountry);
